--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-</html>
 <!DOCTYPE html>
 <html lang="ja">
+<head>
   <meta charset="UTF-8">
   <title>Git HandsOn</title>
 </head>
 <body>
-  <head>
   <h1>Gitハンズオン</h1>
-  <P>rura24</P>
+  <p>superman</p> <!-- 君の名前（superman）が入っていることを確認してね -->
 </body>
+</html>
+
